<resources>
    <string name="acc_serv">Detect Home button</string>
    <string name="acc_disabled">Accessibility Service Disabled</string>
    <string name="acc_disabled_message">Accessible Service is disabled. You must enable it to ensure FireTVjack functionality</string>
    <string name="app_name">FireTVjack</string>
    <string name="app_not_found">Application Not Found</string>
    <string name="apply">OK</string>
    <string name="broadcast_receiver_detection">Broadcast receiver detection</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="choose_launcher">Please select a launcher</string>
    <string name="disable_in_task_switcher">Disable In Task Switcher</string>
    <string name="disable_while_menu_is_held_hardware_buttons_only">Disable while Menu is held (hardware buttons only)</string>
    <string name="donate">Donate</string>
    <string name="hardware_button_detection">Hardware button detection</string>
    <string name="help">Help</string>
    <string name="hide_system_apps">Hide System Apps</string>
    <string name="lang_set_ok">Language is set</string>    
    <string name="lang_not_ok">"Can't set Language"</string>    
    <string name="launcher_open_detection">Freeze KFTV Launcher (risky, requires reboot)</string>
    <string name="launchers_only">Launchers Only</string>
    <string name="load_defaults">Load Defaults</string>
    <string name="open_settings">Open Settings</string>
    <string name="overlay_detection_requires_reboot">Overlay detection (requires reboot)</string>
    <string name="override_language">Set system language to</string>
    <string name="perm_notice">FireTV Permissions Notice</string>
    <string name="save">Save</string>
    <string name="set_launcher_to">Set your launcher to</string>
    <string name="set_launcher">Set Launcher</string>
    <string name="settings_saved">Settings applied</string>
    <string name="settings">Settings</string>
    <string name="sys_settings">System Settings</string>
    <string name="use_google">Use Google Search instead Alexa</string>
    <string name="welcome">The FireTV devices running Nougat or higher do not provide a UI to the Application Permissions.</string>
    <string name="welcome2">In order to use this tool on your device, you must first run the below commands from your PC:</string>
</resources>
