<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/hardwareCBView">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/settings_font_size"
                android:gravity="center_vertical"
                android:text="@string/hardware_button_detection" />
            <CheckBox
                android:id="@+id/hardwareCB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/menuButtonOverrideCBView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/disable_while_menu_is_held_hardware_buttons_only" />
        <CheckBox
            android:id="@+id/menuButtonOverrideCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/openApplicationCBView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/launcher_open_detection" />
        <CheckBox
            android:id="@+id/openApplicationCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/broadcastCBView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/broadcast_receiver_detection" />
        <CheckBox
            android:id="@+id/broadcastCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/overlayCBView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/overlay_detection_requires_reboot" />
        <CheckBox
            android:id="@+id/overlayCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/taskSwitchCBView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/disable_in_task_switcher" />
        <CheckBox
            android:id="@+id/taskSwitchCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/setLangCBView">
        <TextView
            android:id="@+id/setLangTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/override_language" />
        <CheckBox
            android:id="@+id/setLangCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_element_height"
        android:layout_toEndOf="@id/setLangTV"
        android:orientation="vertical"
        android:paddingTop="12dip"
        android:paddingBottom="12dip"
        android:id="@+id/uLocaleCBView">
        <Spinner
            android:id="@+id/locale_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/settings_element_height"
        android:orientation="vertical"
        android:paddingLeft="14dip"
        android:paddingRight="14dip"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:id="@+id/useGSCBView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/settings_font_size"
            android:gravity="center_vertical"
            android:text="@string/use_google" />
        <CheckBox
            android:id="@+id/useGSCB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:weightSum="2">
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="16dip"
            android:layout_marginBottom="16dip"
            android:layout_marginLeft="14dip"
            android:layout_marginRight="14dip"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dip"
            android:layout_marginBottom="16dip"
            android:layout_marginLeft="14dip"
            android:layout_marginRight="14dip"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>